# Firewhale

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: docker-compose.swarm.yml  docker-compose.yml
firewhale/: base.py  cli.py  container.py  docker.py  nf.py  rule.py  serve.py  util.py  watcher.py
firewhale/ipmanager/: __init__.py  base.py  local.py  redis.py
firewhale/nfbackends/: __init__.py  base.py  local.py  socket.py
firewhale/redis/: ips.lua
